# whisper

./: .gitignore  README.md  de.flokoe.Whisper.json  justfile  meson.build  pyproject.toml
.cursor/rules/: blp.mdc  code-style.mdc  tests.mdc  uv.mdc
.devcontainer/: Dockerfile  devcontainer.json
data/: de.flokoe.Whisper.desktop.in  de.flokoe.Whisper.gschema.xml  de.flokoe.Whisper.metainfo.xml.in  de.flokoe.Whisper.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in
src/: database_manager.py  main.py  meson.build  whisper.gresource.xml  whisper.in  window.blp  window.py  window.ui
src/db/: __init__.py  manager.py
tests/: test_database_manager.py
