[project]
name = "whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = []

[dependency-groups]
dev = [
    "pycairo==1.27.0",
    "pygobject==3.50.0",
    "pygobject-stubs>=2.13.0",
    "pyright>=1.1.397",
    "pytest>=8.3.5",
]

[tool.pyright]
include = ["src"]
reportMissingTypeStubs = true
reportMissingModuleSource = "none"
extraPaths = [
    ".venv/lib/python3.12/site-packages",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [".", "src"]